# poketermdle

./: .gitignore  LICENSE  flake.nix
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: game.rs  game_server.rs  lobby.rs  main.rs  matchmaker.rs  player.rs  server.rs  websocket.rs
server/src/game/: game_options.rs  game_state.rs  solution.rs
