[package]
name = "poketermdle-client"
version = "0.1.0"
edition = "2024"

[dependencies]
poketermdle-common = { path = "../common" }
futures-channel = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
bincode = "1.3.3"
serde = "1.0.228"
