[package]
name = "poketermdle-server"
version = "0.1.0"
edition = "2024"

[dependencies]
poketermdle-common = { path = "../common" }
bincode = "1.3.3"
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
rand = "0.9.2"
rustemon = "4.3.0"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
